--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -102,8 +102,8 @@
 
 .callback-form button {
   padding: 12px;
-  background-color: #4CAF50;
-  color: white;
+  background-color: orange;
+  color: black;
   border: none;
   border-radius: 5px;
   cursor: pointer;
@@ -112,7 +112,15 @@
 }
 
 .callback-form button:hover {
-  background-color: #45a049;
+  background-color: orangered;
+}
+
+.text-header {
+  color: black;
+  font-family: "Inter", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 200;
+  font-size: 18px;
 }
 
 @media (max-width: 600px) {
