--- a/src/css/brend-section.css
+++ b/src/css/brend-section.css
@@ -7,12 +7,13 @@
 
 .brend-title {
     text-align: center;
-    margin-bottom: 40px;
+    margin-bottom: 16px;
     color: orange;
-    font-family: "Lora", serif;
+    font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-size: 34px;
-    font-weight: 200;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 28px;
 }
 
 /* Карусель */
