--- a/src/css/main-section.css
+++ b/src/css/main-section.css
@@ -17,10 +17,11 @@ color: orange;
 
 .main-h2{
     margin-bottom: 8px;
-    font-family: "Lora", serif;
+    font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-size: 34px;
-    font-weight: 200;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 28px;
 }
 
 .main-title-content{
@@ -28,15 +29,19 @@ color: orange;
     margin-top: 8px;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    /* font-weight: 500; */
+    font-weight: 700;
+    font-style: normal;
     font-size: 18px;
 }
 
 .main-text-content{
-    font-family: "Inter", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 100;
-    font-size: 16px;
+    font-family: "Roboto", sans-serif;
+     font-optical-sizing: auto;
+     font-weight: 400;
+     font-style: normal;
+     font-variation-settings:
+       "wdth" 100;
+    font-size: 16px;   
 }
 
 @media (max-width: 480px) {
