--- a/src/css/order-steps.css
+++ b/src/css/order-steps.css
@@ -6,11 +6,13 @@ background: black;
     
 
 .order-steps__title {
-    margin-bottom: 20px;
+    margin-bottom: 8px;
     color: orange;
-    font-family: "Lora", serif;
+    font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-size: 34px;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 28px;
 }
 
 .steps-container {
@@ -44,14 +46,24 @@ background: black;
 }
 
 .step__title {
-    font-size: 18px;
     margin-bottom: 10px;
     color: #222;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 18px;
 }
 
 .step__desc {
-    font-size: 14px;
-    color: #666;
+    font-family: "Roboto", sans-serif;
+     font-optical-sizing: auto;
+     font-weight: 400;
+     font-style: normal;
+     font-variation-settings:
+       "wdth" 100;
+    font-size: 16px; 
+    color: #2B2B2B;
 }
 
 .step-arrow {
