--- a/src/css/parts-section.css
+++ b/src/css/parts-section.css
@@ -7,10 +7,11 @@
 
 .parts-title {
     text-align: center;
-    font-family: "Lora", serif;
+    font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
-    font-size: 34px;
-    font-weight: 200;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 28px;
     color: orange;
     margin-bottom: 8px;
 }
