--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -1,6 +1,6 @@
 .hero {
   position: relative;
-  background-image: url(../img/hero-bg-m.jpeg);
+  background-image: url(../img/hero-bg-m.jpg);
   background-size: cover;
   background-position: center;
   height: 100vh;
