--- a/src/css/brend-section.css
+++ b/src/css/brend-section.css
@@ -1,19 +1,19 @@
-/* Основные стили */
 .brend-section {
-    padding: 20px 30px;
-    background: black;
+    padding-bottom: 28px;
+    background: #101010;
     overflow: hidden;
+    margin: 0 auto;
 }
 
 .brend-title {
     text-align: center;
     margin-bottom: 16px;
-    color: orange;
+    color: white;
     font-family: "Montserrat", sans-serif;
     font-optical-sizing: auto;
     font-weight: 700;
     font-style: normal;
-    font-size: 28px;
+    font-size: 32px;
 }
 
 /* Карусель */
@@ -46,6 +46,20 @@
     transform: scale(1.1);
 }
 
+.text-brend {
+    color: white;
+    margin-top: 8px;
+    text-align: center;
+    line-height: 16px;
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+    font-size: 18px;
+}
+
 /* Анимация */
 @keyframes scroll {
     0% {
@@ -76,4 +90,3 @@
         height: 50px;
     }
 }
-
