--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,81 +1,111 @@
-.developer{
+.footer-container {
+    background-color: #3D4A5B;
+    border-bottom: 1px solid #f8f8f8;
+    margin-bottom: 8px;
+    padding: 8px 260px;
+}
+
+.top-map-div {
     display: flex;
-    justify-content: flex-end;
-    color: orange;
-    padding-top: 20px;
+    justify-content: space-between;
+    margin-bottom: 48px;
 }
 
-.map-container {
-    margin: 20px 0;
-    border-radius: 10px;
-    overflow: hidden;
-    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+.map-title {
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 56px;
+    color: white;
 }
 
-.map-container iframe {
-    width: 100%;
-    display: block;
+.map-content {
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+    font-size: 18px;
+    color: rgb(180, 180, 189);
 }
 
-.main-footer{
+.bot-map-div {
     display: flex;
     justify-content: space-between;
 }
 
-.entry-footer{
-    padding-top: 20px;
-}
-
-.contacts-div-footer{
-    display: block;
-}
-
-footer .social{
-    display: flex;
-    flex-direction: column;
-    max-width: 200px;
-    gap: 6px;
-}
-
-.title-card{
-    color: orange;
-    margin-bottom: 4px;
+.map-work-div {
     font-family: "Roboto", sans-serif;
-     font-optical-sizing: auto;
-     font-weight: 400;
-     font-style: normal;
-     font-variation-settings:
-       "wdth" 100;
-    font-size: 16px; 
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+    color: white;
 }
 
-.logo-footer{
-    margin-left: 10px;
-    color: orangered;
-    font-family: Arial, sans-serif;
-    font-weight: bold;
-    font-size: 22px;
-    text-align: center;
+.map-work-title {
+    font-size: 16px;
+    margin-bottom: 24px;
 }
 
-.left-footer{
-    flex: 1;
+.map-work-down {
+    color: rgb(180, 180, 189);
+    font-size: 12px;
+    margin-bottom: 24px;
+}
+
+.map-navi {
+    font-family: "Roboto", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings:
+        "wdth" 100;
+    color: white;
+}
+
+.nav-list {
     display: flex;
     flex-direction: column;
-    align-items: flex-end;
+    gap: 2px;
+    color: rgb(180, 180, 189);
+    font-size: 14px;
 }
 
-.right-footer{
+.social-div {
     display: flex;
-    flex: 1;
-    flex-direction: column;
-}
-
-.contacts-div-footer{
-    display: flex;
-    flex-direction: column;
     gap: 18px;
+    margin-top: 140px;
 }
+
+.viber-button,
+.telegram-button {
+    display: flex;
+    height: 16px;
+    gap: 12px;
+    color: rgb(180, 180, 189);
+    font-size: 12px;
+}
+
+.viber-button:hover,
+.viber-button:focus,
+.telegram-button:hover,
+.telegram-button:focus {
+    color: white;
+}
+
+/* Styles for  mobi */
+@media (max-width: 420px) {
+    .map-section {
+        padding: 0;
+    }
+}
+
+/* Styles for Tablet devices */
+@media only screen and (max-width: 1024px) {}
 
 .to-home {
     position: fixed;
@@ -128,140 +158,4 @@ footer .social{
     opacity: 1;
     transform: translateX(0);
     transition: opacity 0.3s ease 0.1s, transform 0.3s ease;
-}
-
-.footer {
-    padding-right: 30px;
-    padding-left: 30px;
-}
-
-.to-home.sticky-bottom {
-    position: absolute;
-    bottom: auto;
-    top: -60px;
-    margin-bottom: 20px;
-}
-
-.footer-title{
-    color: orange;
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 22px;
-}
-
-.footer-slogon{
-    color: orange;
-    font-family: "Roboto", sans-serif;
-     font-optical-sizing: auto;
-     font-weight: 400;
-     font-style: normal;
-     font-variation-settings:
-       "wdth" 100;
-    font-size: 16px; 
-}
-
-.middle-footer{
-    display: flex;
-    flex-direction: column;
-    gap: 16px;
-    flex: 1;
-}
-
-@media (max-width: 480px) {
-    .main-footer{
-        flex-direction: column;
-        gap: 12px;
-    }
-
-    .contacts-div-footer{
-        flex-direction: row;
-        justify-content: space-between;
-    }
-
-          .middle-footer {
-              order: 1;
-              /* Перемещаем вверх */
-              text-align: center;
-              padding-bottom: 20px;
-              border-bottom: 1px solid #455A64;
-          }
-    
-          /* Нижние блоки (в 2 колонки) */
-          .right-footer,
-          .left-footer {
-              order: 2;
-              width: 100%;
-          }
-}
-
-.social-title{
-    color: orange;
-    font-family: "Roboto", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 400;
-    font-style: normal;
-    font-variation-settings:
-      "wdth" 100;
-   font-size: 18px;
-}
-
-/* callback btn */
-
-.callback-form {
-    background-color: black;
-    padding: 4px 8px;
-    border: #ddd 1px solid;
-    border-radius: 10px;
-    width: 90%;
-    max-width: 400px;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
-    position: relative;
-}
-
-.callback-form h3 {
-    margin-bottom: 4px;
-    text-align: center;
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-    font-size: 18px;
-    color: orange;
-    max-width: 100%;
-}
-
-.callback-form form {
-    display: flex;
-    flex-direction: column;
-    gap: 4px;
-}
-
-.callback-form input {
-    padding: 2px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    font-size: 16px;
-}
-
-.callback-form button {
-    padding: 4px;
-    background-color: orange;
-    color: black;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 16px;
-    transition: background-color 0.3s;
-    color: black;
-    font-family: "Montserrat", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 700;
-    font-style: normal;
-    max-width: 100%;
-}
-
-.callback-form button:hover {
-    background-color: orangered; 
 }
