--- a/src/style.css
+++ b/src/style.css
@@ -1,29 +1,9 @@
-@import url('./css/reset.css');
-
 /* Sections style */
-@import url('./css/header.css');
-
-@import url('./css/hero.css');
-@import url('./css/main-section.css');
-@import url('./css/brend-section.css');
-@import url('./css/parts-section.css');
 @import url('./css/reset.css');
-@import url('./css/partner-section.css');
+@import url('./css/brend-section.css');
+@import url('./css/container.css');
 @import url('./css/footer.css');
-@import url('./css/order-steps.css');
-
-.container,
-footer,
-section {
-    margin-left: auto;
-    margin-right: auto;
-    max-width: 1260px;
-}
-
-section:first-child {
-    max-width: none;
-    margin-left: 0;
-    margin-right: 0;
-    width: 100vw;
-}
-
+@import url('./css/header-section.css');
+@import url('./css/hero-section.css');
+@import url('./css/services-section.css');
+@import url('./css/work-process.css');
