--- a/src/style.css
+++ b/src/style.css
@@ -3,7 +3,7 @@
 @import url('./css/brend-section.css');
 @import url('./css/container.css');
 @import url('./css/footer.css');
-@import url('./css/header-section.css');
+@import url('./css/header.css');
 @import url('./css/hero-section.css');
 @import url('./css/services-section.css');
 @import url('./css/work-process.css');
