--- a/src/css/services-section.css
+++ b/src/css/services-section.css
@@ -1,7 +1,7 @@
 .services-section {
     max-width: 1200px;
     margin: 0 auto;
-    padding: 0px;
+    padding: 20px 0px;
     text-align: center;
 }
 
