--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,4 @@
 @import url('./css/hero-section.css');
 @import url('./css/services-section.css');
 @import url('./css/work-process.css');
+@import url('./css/callback-section.css');
