--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,8 +1,8 @@
 .footer-container {
-    background-color: #3D4A5B;
+    background-color: #2c2b2b;
     border-bottom: 1px solid #f8f8f8;
     margin-bottom: 8px;
-    padding: 8px 260px;
+    padding: 20px 260px;
 }
 
 .top-map-div {
