--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,17 +1,22 @@
 .header {
+    position: absolute;
+    z-index: 10;
+    width: 100%;
     display: flex;
     justify-content: center;
+    top: 0;
 }
 
 .nav-list-header {
     display: flex;
+    gap: 12px;
     flex-direction: row;
-    margin-top: 64px;
+    margin-top: 38px;
     color: white;
 }
 
 .nav-item {
-    padding: 16px 28px;
+    padding: 16px 20px;
     font-size: 16px;
     position: relative;
 }
@@ -62,4 +67,8 @@
 .dropdown:hover .dropdown-content {
     opacity: 1;
     visibility: visible;
+}
+
+.hero-content-container > div{
+    align-items: center;
 }
