--- a/src/style.css
+++ b/src/style.css
@@ -8,3 +8,4 @@
 @import url('./css/services-section.css');
 @import url('./css/work-process.css');
 @import url('./css/callback-section.css');
+@import url('./css/benefits-section.css');
