--- a/src/css/header.css
+++ b/src/css/header.css
@@ -1,3 +1,10 @@
+body{
+    border: 1px solid #f3f3f3;
+    background-color: #101010;
+    margin-top: 8px;
+    border-top: none;
+}
+
 .header {
     position: absolute;
     z-index: 10;
@@ -72,3 +79,4 @@
 .hero-content-container > div{
     align-items: center;
 }
+
