--- a/src/css/hero-section.css
+++ b/src/css/hero-section.css
@@ -1,7 +1,7 @@
 .hero {
     position: relative;
     color: white;
-    /* background-image: url(../img/pexels-photo-170813.jpeg); */
+    background-image: url(../img/pexels-photo-170813.jpeg);
     background-color: #101010;
     background-size: cover;
     background-position: center;
@@ -12,6 +12,24 @@
     justify-content: center;
     text-align: center;
     border-top: 1px solid #f8f8f8;
+}
+
+.hero::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    /* Чёрный с прозрачностью 50% */
+    z-index: 1;
+}
+
+/* Чтобы контент был поверх затемнения */
+.hero>* {
+    position: relative;
+    z-index: 2;
 }
 
 .hero-content-container {
