--- a/src/css/benefits-section.css
+++ b/src/css/benefits-section.css
@@ -15,6 +15,7 @@
     max-width: 900px;
     margin-left: auto;
     margin-right: auto;
+    max-width: 275px;
 }
 
 .benefits-title{
@@ -81,4 +82,26 @@
     font-variation-settings:
         "wdth" 100;
     font-size: 16px;
+}
+
+@media (max-width: 480px){
+    .benefits-section{
+        padding: 20px 20px;
+    }
+
+    .benefits-containers{
+        flex-direction: column;
+        gap: 24px;
+    }
+
+    .benefits-title{
+        font-size: 38px;
+        margin-bottom: 20px;
+    }
+
+    .benefits-container{
+        border: 1px solid #24a7c1;
+        border-radius: 8px;
+        padding: 12px 4px;
+    }
 }
