--- a/src/css/container.css
+++ b/src/css/container.css
@@ -1,15 +1,20 @@
 /* Styles for Mobile devices */
-.container {
-    min-width: 320px;
-    max-width: 420px;
-    margin: 0 auto;
-    padding: 0;
+@media (max-width: 480px){
+    .container {
+        min-width: 320px;
+        max-width: 420px;
+        margin: 0 auto;
+        padding: 0;
+    }
 }
+
+
 
 /* Styles for Tablet devices */
 @media only screen and (min-width: 768px) {
     .container {
         max-width: 1024px;
+        margin: 0 auto;
     }
 }
 
@@ -19,5 +24,6 @@
         max-width: 1400px;
         border-left: 1px solid #f8f8f8;
         border-right: 1px solid #f8f8f8;
+        margin: 0 auto;
     }
 }
