--- a/src/css/services-section.css
+++ b/src/css/services-section.css
@@ -161,4 +161,26 @@
         flex: 0 0 calc(100% - 20px);
         /* 1 карточка */
     }
+
+    .services-top{
+        flex-direction: column;
+        gap: 24px;
+        margin-left: 10px;
+        align-items: center;
+    }
+
+    .services-title{
+        font-size: 38px;
+        margin-bottom: 12px;
+    }
+
+    .service-card{
+        max-width: 80%;
+    }
+
+    .services-container{
+        max-width: 90%;
+        padding-left: 10px;
+        padding-right: 10px;
+    }
 }
