--- a/src/style.css
+++ b/src/style.css
@@ -9,3 +9,4 @@
 @import url('./css/work-process.css');
 @import url('./css/callback-section.css');
 @import url('./css/benefits-section.css');
+@import url('./css/price-section.css');
