--- a/src/style.css
+++ b/src/style.css
@@ -10,3 +10,6 @@
 @import url('./css/callback-section.css');
 @import url('./css/benefits-section.css');
 @import url('./css/price-section.css');
+@import url('./css/hero-price-section.css');
+@import url('./css/hero-contacts-section.css');
+@import url('./css/contacts-body-sections.css');
