--- a/src/css/price-section.css
+++ b/src/css/price-section.css
@@ -4,9 +4,19 @@
 }
 
 .price {
-    font-family: Arial, sans-serif;
+    font-family: "Roboto", sans-serif;
     line-height: 1.6;
     margin: 20px;
+}
+
+.price-title{
+    margin-bottom: 20px;
+    font-family: "Montserrat", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 700;
+    font-style: normal;
+    font-size: 28px;
+    text-align: center;
 }
 
 .price-content{
@@ -16,7 +26,7 @@
     font-style: normal;
     font-variation-settings:
         "wdth" 100;
-    margin: 20px auto;
+    margin: 0px auto;
     max-width: 1000px;    
     font-size: 18px;
     text-indent: 20px;
@@ -60,4 +70,5 @@ tr:hover {
     font-weight: 600;
     font-style: normal;
     font-weight: bold;
+    margin-top: 8px;
 }
