--- a/src/style.css
+++ b/src/style.css
@@ -13,3 +13,5 @@
 @import url('./css/hero-price-section.css');
 @import url('./css/hero-contacts-section.css');
 @import url('./css/contacts-body-sections.css');
+@import url('./css/service-catalog.css');
+
