--- a/src/style.css
+++ b/src/style.css
@@ -14,4 +14,5 @@
 @import url('./css/hero-contacts-section.css');
 @import url('./css/contacts-body-sections.css');
 @import url('./css/service-catalog.css');
-
+@import url('./css/parts.css');
+@import url('./css/foto-gallery.css');
