--- a/src/css/benefits-section.css
+++ b/src/css/benefits-section.css
@@ -46,12 +46,13 @@
     display: flex;
     align-items: center; 
     flex-direction: column;
-
+    align-items: flex-start;
 }
 
 .benefits-top{
     display: flex;
     align-items: center;
+
 }
 
 .benefits-number{
@@ -61,12 +62,12 @@
     font-weight: 700;
     font-style: normal;
     font-size: 56px;
+    margin-left: 20px;
 }
 
 .benefits-top-text{
     max-width: 220px;
     margin-left: 16px;
-    
 }
 
 .benefits-bot-text{
