--- a/src/style.css
+++ b/src/style.css
@@ -16,3 +16,4 @@
 @import url('./css/service-catalog.css');
 @import url('./css/parts.css');
 @import url('./css/foto-gallery.css');
+@import url('./css/main-content-section.css');
