--- a/src/style.css
+++ b/src/style.css
@@ -17,3 +17,4 @@
 @import url('./css/parts.css');
 @import url('./css/foto-gallery.css');
 @import url('./css/main-content-section.css');
+@import url('./css/ustanovka-gbo.css');
