--- a/src/css/hero-section.css
+++ b/src/css/hero-section.css
@@ -315,7 +315,7 @@ body.modal-open::after {
 }
 
 .phone {
-    background-color: #4CAF50;
+    background-color:rgb(85, 209, 89);
 }
 
 .social-icon {
