--- a/src/css/header.css
+++ b/src/css/header.css
@@ -197,6 +197,7 @@ header {
   .language-switcher {
     display: flex;
     align-items: center;
+    justify-content: center;
     gap: 5px;
   }
   
