--- a/src/css/hero-price-section.css
+++ b/src/css/hero-price-section.css
@@ -1,7 +1,7 @@
 .hero-price-section {
     position: relative;
     color: white;
-    background-image: url(../img/price-auto-img.png);
+    background-image: url(../img/price-auto-img.jpg);
     background-color: #101010;
     background-size: cover;
     background-position: center;
